# polyglot

./: .gitignore  README.md  pyproject.toml
src/app/: __init__.py  main.py
src/constants/: __init__.py  constants.py  filepaths.py
src/helper/: helper.py
src/polyglot/: __init__.py
